--- a/contact-us.html
+++ b/contact-us.html
@@ -2970,7 +2970,7 @@ ele.style.display = "block";
                              </div><div class="spb_column gl_column_container gl_col-sm-6">
 						      <div class="gl_column-inner contact_form_sec">
 						         <div class="spb_wrapper"><div role="form" class="wpcf7" lang="en" dir="ltr">
-					                  <div class="screen-reader-response"></div><form method="post" action="https://kimaye.com/contact#contact_form" id="contact_form" accept-charset="UTF-8" class="contact-form"><input type="hidden" name="form_type" value="contact"><input type="hidden" name="utf8" value="✓"><p>
+					                  <div class="screen-reader-response"></div><form method="post" action="/contact.html#contact_form" id="contact_form" accept-charset="UTF-8" class="contact-form"><input type="hidden" name="form_type" value="contact"><input type="hidden" name="utf8" value="✓"><p>
 <!--                                         <label>Your Name</label>  -->
                                         <span class="wpcf7-form-control-wrap your-name">
                                           <input type="text" name="contact[name]" value="" size="40" class="input__ok" aria-required="true" aria-invalid="false" placeholder="Name">
