--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,7 @@
 
 <!-- saved from url=(0039)https://kimaye.com/pages/privacy-policy -->
-<html class="yes-js js_active js" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
+<html class="yes-js js_active js" lang="en"><head>    <link rel="stylesheet" href=
+  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>
    @font-face {
    font-family: Bitterbrush;
    src: url(Bitterbrush.otf);
