--- a/traceability.html
+++ b/traceability.html
@@ -2,6 +2,8 @@
 <html class="yes-js js_active js" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href=
+    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
       @font-face {
         font-family: Bitterbrush;
